--- a/style.css
+++ b/style.css
@@ -1,7 +1,40 @@
+.header, .footer, .first-container, .coloured-box{
+    background-color: #1f2937;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #f9faf8;
+    padding: 16px;
+}
+
+.button, .button2 {
+    background-color: #3882f6;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.button2 {
+    border: 2px solid white;
+    font-size: 14px;
+}
+
 .header {
     display: flex;
     justify-content:space-between;
-    padding: 16px;
+}
+
+.header-logo {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.header-link, .website-subtext {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.footer {
+    display:flex;
+    justify-content: center;
 }
 
 ul {
@@ -16,20 +49,42 @@ ul {
     display: flex;
 }
 
+.website-statement {
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.second-container-heading{
+    text-align: center;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+
 .inner-second-container {
     display:flex;
     justify-content: center;
     gap: 52px;
 }
 
+.third-container {
+    background-color: #e5e7eb;
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+}
+
 .coloured-box {
     display: flex;
     justify-content: center;
-
+    background: #3882f6;
 }
 
-.second-container-heading{
-    text-align: center;
+.coloured-box-button {
+    display: flex;
+    align-items: center;
 }
 
-
+.coloured-box-call {
+    font-weight: bolder;
+}
