--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
     padding: 16px 100px 16px 100px;
 }
 
-.third-container {
-    padding: 16px 128px 16px 128px;
+.third-container, .fourth-container {
+    padding: 64px 150px 64px 150px;
 }
 
 .info-img {
@@ -107,12 +107,15 @@ ul {
 .quote-attribute {
     font-size: 30px;
     text-align: right;
+    font-weight: bold;
 }
 
 .coloured-box {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     background: #3882f6;
+    border-radius: 5px;
+    padding: 16px 64px;
 }
 
 .coloured-box-button {
