--- a/style.css
+++ b/style.css
@@ -32,13 +32,20 @@
 
 .button, .button2 {
     background-color: #3882f6;
+    border: 2px solid #3882f6;
     color: white;
     font-weight: bold;
     border-radius: 5px;
 }
 
+.text-heading{
+    color: black;
+    font-weight: bold;
+    font-size: larger;
+}
+
 .button2 {
-    border: 2px solid white;
+    border: 1px solid white;
     font-size: 14px;
 }
 
